crate/src/parser/snapshots/tests__parser::tests::parse_number_literal.snap
---
created: "2019-06-25T20:03:47.832573Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Literal(
        Number(
            2.0
        ),
        Range {
            start: Pos {
                line: 0,
                column: 0
            },
            end: Pos {
                line: 0,
                column: 1
            }
        }
    )
)
