crate/src/parser/snapshots/tests__parser::tests::parse_shape_default_arg.snap
---
created: "2019-07-12T18:23:20.271910Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Shape {
        name: "circle",
        args: [
            Arg {
                name: "r",
                default: Some(
                    Literal(
                        Number(
                            10.0,
                        ),
                        Range {
                            start: Pos {
                                line: 0,
                                column: 17,
                            },
                            end: Pos {
                                line: 0,
                                column: 19,
                            },
                        },
                    ),
                ),
            },
        ],
        block: Block {
            calls: [
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 21,
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 22,
                                    },
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 1,
                            column: 2,
                        },
                        end: Pos {
                            line: 1,
                            column: 22,
                        },
                    },
                },
            ],
            range: Range {
                start: Pos {
                    line: 0,
                    column: 21,
                },
                end: Pos {
                    line: 2,
                    column: 1,
                },
            },
        },
        pos: Pos {
            line: 0,
            column: 0,
        },
    },
)
