crate/src/parser/snapshots/tests__parser::tests::parse_shape_multiple_statements.snap
---
created: "2019-07-12T18:22:33.286437Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Shape {
        name: "circle",
        args: [
            Arg {
                name: "r",
                default: None,
            },
        ],
        block: Block {
            calls: [
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 1,
                                            column: 21,
                                        },
                                        end: Pos {
                                            line: 1,
                                            column: 22,
                                        },
                                    },
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0,
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 1,
                                            column: 25,
                                        },
                                        end: Pos {
                                            line: 1,
                                            column: 27,
                                        },
                                    },
                                ),
                                Pos {
                                    line: 1,
                                    column: 23,
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 1,
                            column: 2,
                        },
                        end: Pos {
                            line: 1,
                            column: 27,
                        },
                    },
                },
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 2,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 2,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 2,
                                        column: 21,
                                    },
                                    end: Pos {
                                        line: 2,
                                        column: 22,
                                    },
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 2,
                            column: 2,
                        },
                        end: Pos {
                            line: 2,
                            column: 22,
                        },
                    },
                },
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 3,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 3,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 3,
                                            column: 21,
                                        },
                                        end: Pos {
                                            line: 3,
                                            column: 22,
                                        },
                                    },
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0,
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 3,
                                            column: 25,
                                        },
                                        end: Pos {
                                            line: 3,
                                            column: 27,
                                        },
                                    },
                                ),
                                Pos {
                                    line: 3,
                                    column: 23,
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 3,
                            column: 2,
                        },
                        end: Pos {
                            line: 3,
                            column: 27,
                        },
                    },
                },
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 4,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 4,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 4,
                                            column: 21,
                                        },
                                        end: Pos {
                                            line: 4,
                                            column: 22,
                                        },
                                    },
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0,
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 4,
                                            column: 25,
                                        },
                                        end: Pos {
                                            line: 4,
                                            column: 27,
                                        },
                                    },
                                ),
                                Pos {
                                    line: 4,
                                    column: 23,
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 4,
                            column: 2,
                        },
                        end: Pos {
                            line: 4,
                            column: 27,
                        },
                    },
                },
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 5,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 5,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 5,
                                        column: 21,
                                    },
                                    end: Pos {
                                        line: 5,
                                        column: 22,
                                    },
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 5,
                            column: 2,
                        },
                        end: Pos {
                            line: 5,
                            column: 22,
                        },
                    },
                },
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 6,
                                        column: 14,
                                    },
                                    end: Pos {
                                        line: 6,
                                        column: 15,
                                    },
                                },
                            ),
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 6,
                                        column: 21,
                                    },
                                    end: Pos {
                                        line: 6,
                                        column: 22,
                                    },
                                },
                            ),
                        },
                    ],
                    range: Range {
                        start: Pos {
                            line: 6,
                            column: 2,
                        },
                        end: Pos {
                            line: 6,
                            column: 22,
                        },
                    },
                },
            ],
            range: Range {
                start: Pos {
                    line: 0,
                    column: 16,
                },
                end: Pos {
                    line: 7,
                    column: 1,
                },
            },
        },
        pos: Pos {
            line: 0,
            column: 0,
        },
    },
)
