crate/src/parser/snapshots/tests__parser::tests::parse_simple_binary_expression.snap
---
created: "2019-07-08T18:41:37.171371Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Binary(
        Literal(
            Number(
                10.0,
            ),
            Range {
                start: Pos {
                    line: 0,
                    column: 0,
                },
                end: Pos {
                    line: 0,
                    column: 2,
                },
            },
        ),
        Add,
        Literal(
            Number(
                2.0,
            ),
            Range {
                start: Pos {
                    line: 0,
                    column: 5,
                },
                end: Pos {
                    line: 0,
                    column: 6,
                },
            },
        ),
        Pos {
            line: 0,
            column: 3,
        },
    ),
)
