crate/src/parser/snapshots/tests__parser::tests::parse_simple_identifier.snap
---
created: "2019-07-08T18:41:37.171274Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Name(
        "hello",
        Range {
            start: Pos {
                line: 0,
                column: 0,
            },
            end: Pos {
                line: 0,
                column: 5,
            },
        },
    ),
)
