crate/src/parser/snapshots/tests__parser::tests::parse_simple_shape.snap
---
created: "2019-06-29T00:07:27.493046Z"
creator: insta@0.8.1
source: src/parser/mod.rs
expression: ast
---
Ok(
    Shape {
        name: "circle",
        args: [
            "r"
        ],
        block: Block {
            calls: [
                FunCall {
                    ident: "ellipse",
                    args: [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 21
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 22
                                    }
                                }
                            )
                        }
                    ],
                    range: Range {
                        start: Pos {
                            line: 1,
                            column: 2
                        },
                        end: Pos {
                            line: 1,
                            column: 22
                        }
                    }
                }
            ],
            range: Range {
                start: Pos {
                    line: 0,
                    column: 16
                },
                end: Pos {
                    line: 2,
                    column: 1
                }
            }
        },
        pos: Pos {
            line: 0,
            column: 0
        }
    }
)
